# aio

./: Cargo.toml  get.simp  qql_ast
example/: project
example/db/: user
example/routes/: GET.simp  get  get.simp
example/shared/: head.simp
example/view/: head
src/: cli.rs  config.rs  main.rs  parser.rs  simpl.rs  util.rs  web.rs
src/config/: ast.rs  config.pest  context.rs  error.rs  eval.rs  mod.rs
src/db/: ast.rs  backend.rs  context.rs  migrate.rs  mod.rs  model.rs  parser.rs  types.rs  validate.rs
src/db/backend/: driver.rs  postgres.rs
src/db/validate/: error.rs  mod.rs  model.rs  query.rs
src/parser/: ident.rs  section.rs
src/pest/: db.pest  db.rs  mod.rs  project.pest  project.rs
src/simpl/: parser.rs
src/simpl/runtime/: error.rs  mod.rs  scope.rs
src/web/: context.rs  service.rs  validate.rs
